+ renamed symbols i_(ram|irq)_on_(entering|exit) to i_(ram|irq)_(enter|exit)
+ renamed symboli_config_effect to i_effect
+ added symbols i_(ram|irq)_during.
+ added new sfx target -t 168 ($a8), The Atari 400/800 XL/XE computer family.
  The sfx file is written as a xex-file.
+ added ability to autodetect and read Atari Xex-files.
+ cmpression results should be exact as 1.1.5 now (if the -c flag is used).

2005-04-10
replaced 2.0beta1
+ tuned the cruncher for better compression, should be on pair with 1.1.5 now.
+ modified the usage of the symbol i_ram_on_exit
+ documented symbol i_table_addr
+ added symbol i_irq_on_exit

2005-04-06
replaced 2.0beta1
+ fixed +4 bank optmization in sfx decruncher
+ fixed bug in non-literal-sequence sfx decruncher that caused
  the decrunched data to be offset in memory.

2005-04-03
replaced 2.0beta1
+ fixed -Di_config_effect

2005-04-02
initial release of 2.0beta1 no source.